--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,78 @@
-.title {
-    display: flex;
-    justify-content:center ;
+main {
+    background-color: black;
 }
 
-.big-container {
-    background-color: rgb(192, 192, 192);
+svg {
+    width: 30px;
+    height: 30px;
+}
+
+.post {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.box {
+.post-header {
     background-color: white;
-    margin: 10px;
-    padding: 15px;
-    width: 300px;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
+    margin: 10px 0 0 0;
+    width: 500px;
 }
 
-.box-img {
-    width: 100%;
-    border-radius: 5px;
+.post-header-name {
+    flex-grow: 8;
+    margin: 0 10px 0 10px;
 }
 
-.box-title, .box-date {
-margin: 0 0 10px 0;
+.post-header-name h2, p {
+    margin: 0;
 }
 
-.box-date {
-    color: rgb(216, 216, 216)
+.first-icon {
+    margin-left: 10px;
+}
+
+.second-icon {
+    margin-right: 10px;
+}
+
+h2 {
+    font-size:large;
+}
+
+img {
+    width: 500px;
+    height: 400px;
+}
+
+.post-body {
+    background-color: white;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+.post-body-icons {
+    display: flex;
+}
+
+.last {
+    
+    flex-grow: 6;
+}
+
+.post-body-icons svg {
+    margin: 5px;
+}
+
+.post-body-title {
+    margin: 10px 10px;
+}
+
+.post-body-description {
+    margin: 0 10px 10px 10px;
 }
